# webserver-benchmark

./: .env.apps.example  .env.observability.example  .gitignore  AGENTS.md  DOCKER.md  README.md  docker-compose.apps.yml  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.podman-exporter-rootless.yml  docker-compose.yml  pom.xml
apps/: README.md
apps/ai-model/: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-entrypoint-dev.sh  pyproject.toml  requirements-llm.txt  requirements.txt
apps/ai-model/scripts/: download_model.ps1  run_local.ps1
apps/ai-model/src/ai_model/: __init__.py  app.py  cli.py  config.py  engine.py
apps/ai-model/tests/: test_health.py
apps/java/: .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  docker-entrypoint-dev.sh  pom.xml
apps/kafka/: .gitignore  README.md
apps/postgres/: README.md
apps/python/: .dockerignore  .gitattributes  Dockerfile  README.md  docker-entrypoint-dev.sh  pyproject.toml  requirements.txt
apps/python/scripts/: init_venv.ps1  init_venv.sh  run_server.ps1
apps/python/src/exercises/: __init__.py
apps/python/src/exercises/web/: app.py  auth_api.py  auth_service.py  controller_logging.py  correlation.py  db.py  http_access_logging.py  items_api.py  junit_report.py  kafka_config.py  kafka_create_item.py  observability_logging.py  openapi.py  openapi_routes.py  outbound_http_logging.py  password_util.py  pytest_nodeid.py  pytest_runner.py  relay_api.py  relay_registry.py  relay_service.py  request_id.py  request_snapshot.py  session_auth.py  session_models.py  session_repository.py  stack_ping.py  test_result_row.py  users_api.py
apps/python/src/exercises/web/static/: auth-gate.js  session-bootstrap.js
apps/python/src/exercises/web/templates/: home.html  landing.html  swagger_ui.html
apps/python/tests/: conftest.py  test_http_access_logging.py  test_junit_report.py  test_metrics_endpoint.py  test_openapi.py  test_outbound_http_logging.py  test_package.py  test_stack_landing.py
apps/python/tests/api/: test_items_api_readiness.py  test_orders_api_readiness.py  test_relay_api.py  test_users_api_readiness.py
apps/python/tests/unit/: test_request_id_kafka.py
apps/react-node/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-entrypoint-dev.sh  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
apps/redis/: README.md  SHARED-SESSION-PLAN.md
apps/rust/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
apps/zig/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  build.zig  build.zig.zon  docker-entrypoint-dev.sh
devops/elk/: README.md  docker-compose.yml
devops/grafana/: README.md  docker-compose.yml
devops/kubernetes-orchestration/: README.md
devops/prometheus/: README.md  prometheus.yml  start-gpu-exporter.ps1  start-gpu-exporter.sh  start-podman-exporter.ps1  start-podman-exporter.sh
elk/: README.md  docker-compose.yml
elk/filebeat/: filebeat-compose.yml
elk/kibana/: kibana.yml
grafana/: README.md  docker-compose.yml
java/: .gitignore  Dockerfile  pom.xml
java/observability/: filebeat-java.yml.example
kubernetes-orchestration/: README.md
kubernetes-orchestration/values/: us-east.example.yaml
postgre/: README.md
postgres/: .gitignore  README.md
python/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/src/exercises/web/: __init__.py  app.py  cli.py  pytest_runner.py  source_service.py  stack_ping.py
python/src/exercises/web/templates/: home.html  landing.html
reach-ui/: Dockerfile.dev  README.md  nginx.conf  vite.config.ts
react-node/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-entrypoint-dev.sh  package-lock.json  package.json  vite.config.ts
rust/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
rust/.config/: nextest.toml
rust/scripts/: resetup_rust_env.ps1  resetup_rust_env.sh
rust/src/: app.rs  flash.rs  items.rs  junit.rs  lib.rs  main.rs  runner.rs  stack_ping.rs
rust/templates/: home.html  landing.html
rust/tests/: metrics_endpoint.rs
(+381 files in other folders)
