[project]
name = "exercises-ai-model"
version = "0.1.0"
description = "Local AI model inference for the exercises stack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "prometheus-client>=0.21",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
llm = ["llama-cpp-python>=0.3.4"]
dev = ["httpx>=0.27", "pytest>=8"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-model-serve = "ai_model.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
