[project]
name = "exercises"
version = "0.1.0"
description = "Python exercises"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "prometheus-client>=0.21",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"exercises.web" = ["templates/*.html"]

[project.scripts]
exercises-web = "exercises.web.cli:main"

[tool.pytest.ini_options]
addopts = "--junitxml=reports/junit.xml"
testpaths = ["tests"]
