[project]
name = "exercises"
version = "0.1.0"
description = "WebServer BenchMark — Python dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "prometheus-client>=0.21",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "kafka-python>=2.0",
  "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"exercises.web" = ["templates/*.html", "static/*"]

[project.scripts]
webserver-benchmark-web = "exercises.web.cli:main"

[tool.pytest.ini_options]
addopts = "--junitxml=reports/junit.xml"
testpaths = ["tests"]
